kubernetes/manifests/webhook-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: driveby-github-eventsource-svc
  namespace: driveby
spec:
  selector:
    controller: eventsource-controller
    eventsource-name: driveby-github
  ports:
    - port: 12000
      targetPort: 12000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: driveby-webhook
  namespace: driveby
  annotations:
    cert-manager.io/cluster-issuer: sys-prod-issuer-dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-system
  rules:
    - host: driveby-webhook.private.novelcore.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: driveby-github-eventsource-svc
                port:
                  number: 12000
  tls:
    - hosts:
        - driveby-webhook.private.novelcore.org
      secretName: driveby-webhook-tls
